--- a/roles/authelia/tasks/fail2ban.yml
+++ b/roles/authelia/tasks/fail2ban.yml
@@ -2,7 +2,7 @@
 - name: Install fail2ban filter configuration
   ansible.builtin.copy:
     src: fail2ban_filter.conf
-    dest: "{{ swag_volume_fail2ban }}/filter.d/authelia.conf"
+    dest: "{{ swag_volume_fail2ban }}/filter.d/authelia.local"
     owner: "{{ guid }}"
     group: "{{ guid }}"
     mode: '0644'
@@ -17,11 +17,8 @@
       enabled = true
       port = http,https,9091
       filter = authelia
-      maxretry = 3
-      bantime = 1d
-      findtime = 1d
-      chain = DOCKER-USER
-      action = iptables-allports[name=authelia]
+      action = {{ 'cloudflare-token' if swag_cloudflare_tunnel_enable | default(False) else 'iptables-allports' }}[name=authelia,cftoken="{{
+        cloudflare_api_token }}"]
       logpath = {{ swag_fail2ban_monitored_logs }}/authelia.log
 
 - name: Add Authelia to the list of logs to be mounted by SWAG
