--- a/roles/homer/tasks/docker.yml
+++ b/roles/homer/tasks/docker.yml
@@ -1,9 +1,9 @@
 ---
 # https://github.com/bastienwirtz/homer
 - name: Make sure that Homer container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: homer
-    image: b4bz/homer
+    image: b4bz/homer:latest
     pull: true
     networks:
       - name: swag_network
