--- a/roles/influxdb/tasks/main.yml
+++ b/roles/influxdb/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Make sure that InfluxDB container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ influxdb_container_name }}"
     image: influxdb
     pull: true
