--- a/roles/swag/tasks/networks.yml
+++ b/roles/swag/tasks/networks.yml
@@ -1,5 +1,5 @@
 ---
-- name: Create an docker network
+- name: Create a docker network
   community.docker.docker_network:
     name: swag_network
     ipam_config:
