--- a/roles/uptime_kuma/tasks/main.yml
+++ b/roles/uptime_kuma/tasks/main.yml
@@ -8,7 +8,7 @@
     mode: "0750"
 
 - name: Make sure that Uptime Kuma container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ uptime_kuma_container_name }}"
     image: louislam/uptime-kuma:1
     pull: true
