fix: homer attributes as variables

--- a/roles/arm/defaults/main.yml
+++ b/roles/arm/defaults/main.yml
@@ -3,4 +3,6 @@ arm_container_name: arm
 arm_subdomain: arm
 arm_dashboard_url: https://{{ arm_subdomain }}.{{ site_url }}
 arm_dashboard_name: Ripping Machine
-arm_homer_category: media
+arm_homer:
+  name: "{{ arm_dashboard_name }}"
+  category: media
