--- a/roles/firefox/defaults/main.yml
+++ b/roles/firefox/defaults/main.yml
@@ -3,4 +3,6 @@ firefox_container_name: firefox
 firefox_subdomain: firefox
 firefox_dashboard_url: https://{{ firefox_subdomain }}.{{ site_url }}
 firefox_dashboard_name: Firefox
-firefox_homer_category: services
+firefox_homer:
+  name: "{{ invidious_dashboard_name }}"
+  category: services
