--- a/roles/firefox/tasks/main.yml
+++ b/roles/firefox/tasks/main.yml
@@ -36,6 +36,7 @@
     labels:
       swag.uptime-kuma.enabled: "true"
       swag.uptime-kuma.monitor.name: "{{ firefox_dashboard_name }}"
+      swag.uptime-kuma.monitor.url: "{{ firefox_dashboard_url }}"
 
 - name: Install the SWAG config files
   template:
