--- a/roles/handbrake/defaults/main.yml
+++ b/roles/handbrake/defaults/main.yml
@@ -3,4 +3,6 @@ handbrake_container_name: handbrake
 handbrake_subdomain: handbrake
 handbrake_dashboard_url: https://{{ handbrake_subdomain }}.{{ site_url }}
 handbrake_dashboard_name: HandBrake
-handbrake_homer_category: media
+handbrake_homer:
+  name: "{{ invidious_dashboard_name }}"
+  category: media
