--- a/roles/readarr/defaults/main.yml
+++ b/roles/readarr/defaults/main.yml
@@ -2,8 +2,9 @@
 readarr_container_name: readarr
 readarr_subdomain: readarr
 readarr_dashboard_url: https://{{ readarr_subdomain }}.{{ host_local }}
-readarr_homer_category: servarr
+readarr_dashboard_name: Readarr
 readarr_homer:
-  name: Readarr
+  name: "{{ readarr_dashboard_name }}"
+  category: servarr
   type: Readarr
   apikey: "{{ homer_api_keys['Readarr'] }}"
