--- a/roles/speedtest_tracker/defaults/main.yml
+++ b/roles/speedtest_tracker/defaults/main.yml
@@ -2,7 +2,8 @@
 speedtest_tracker_container_name: speedtest_tracker
 speedtest_tracker_subdomain: speedtest
 speedtest_tracker_dashboard_url: https://{{ speedtest_tracker_subdomain }}.{{ site_url }}
-speedtest_tracker_homer_category: services
+speedtest_tracker_dashboard_name: Speedtest Tracker
 speedtest_tracker_homer:
-  name: Speedtest Tracker
+  name: "{{ speedtest_tracker_dashboard_name }}"
+  category: services
   type: SpeedtestTracker
