--- a/roles/arm/tasks/main.yml
+++ b/roles/arm/tasks/main.yml
@@ -57,6 +57,7 @@
     labels:
       swag.uptime-kuma.enabled: "true"
       swag.uptime-kuma.monitor.name: "{{ arm_dashboard_name }}"
+      swag.uptime-kuma.monitor.url: "{{ arm_dashboard_url }}"
 
 - name: Install the SWAG config files
   template:
