--- a/roles/calibreweb/tasks/main.yml
+++ b/roles/calibreweb/tasks/main.yml
@@ -77,6 +77,7 @@
     labels:
       swag.uptime-kuma.enabled: "true"
       swag.uptime-kuma.monitor.name: "{{ calibreweb_dashboard_name }}"
+      swag.uptime-kuma.monitor.url: "{{ calibreweb_dashboard_url }}"
 
 - name: Install the SWAG config files
   template:
