--- a/roles/influxdb/defaults/main.yml
+++ b/roles/influxdb/defaults/main.yml
@@ -3,6 +3,6 @@ influxdb_container_name: influxdb
 influxdb_subdomain: influxdb
 influxdb_dashboard_url: https://{{ influxdb_subdomain }}.{{ host_local }}/
 influxdb_dashboard_name: InfluxDB
-influxdb_homer_category: system
 influxdb_homer:
   name: "{{ influxdb_dashboard_name }}"
+  category: system
