--- a/roles/jellyfin/tasks/main.yml
+++ b/roles/jellyfin/tasks/main.yml
@@ -54,6 +54,7 @@
     labels:
       swag.uptime-kuma.enabled: "true"
       swag.uptime-kuma.monitor.name: "{{ jellyfin_dashboard_name }}"
+      swag.uptime-kuma.monitor.url: "{{ jellyfin_dashboard_url }}"
 
 - name: Install the SWAG config files
   template:
