--- a/roles/lidarr/defaults/main.yml
+++ b/roles/lidarr/defaults/main.yml
@@ -2,8 +2,9 @@
 lidarr_container_name: lidarr
 lidarr_subdomain: lidarr
 lidarr_dashboard_url: https://{{ lidarr_subdomain }}.{{ site_url }}
-lidarr_homer_category: servarr
+lidarr_dashboard_name: Lidarr
 lidarr_homer:
-  name: Lidarr
+  name: "{{ lidarr_dashboard_name }}"
+  category: servarr
   type: Lidarr
   apikey: "{{ homer_api_keys['Lidarr'] }}"
