--- a/roles/navidrome/defaults/main.yml
+++ b/roles/navidrome/defaults/main.yml
@@ -3,4 +3,6 @@ navidrome_container_name: navidrome
 navidrome_subdomain: navidrome
 navidrome_dashboard_url: https://{{ navidrome_subdomain }}.{{ site_url }}
 navidrome_dashboard_name: Navidrome
-navidrome_homer_category: media
+navidrome_homer:
+  name: "{{ navidrome_dashboard_name }}"
+  category: media
