--- a/roles/prowlarr/tasks/main.yml
+++ b/roles/prowlarr/tasks/main.yml
@@ -1,11 +1,26 @@
 ---
+- name: Create the necessary Prowlarr folder
+  file:
+    path: "{{ docker_dir }}/{{ prowlarr_container_name }}"
+    state: directory
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
+    mode: "0755"
+
+- name: Create a docker network
+  community.docker.docker_network:
+    name: arr_network
+    connected:
+      - "{{ swag_container_name }}"
+    appends: true
+
 - name: Make sure that FlareSolverr container is created and running
   docker_container:
     name: flaresolverr
     image: ghcr.io/flaresolverr/flaresolverr:latest
     pull: true
     networks:
-      - name: swag_network
+      - name: arr_network
     state: started
     env:
       LOG_LEVEL: info
@@ -18,7 +33,7 @@
     image: lscr.io/linuxserver/prowlarr:develop
     pull: true
     networks:
-      - name: swag_network
+      - name: arr_network
     state: started
     env:
       PUID: "{{ guid }}"
@@ -31,6 +46,7 @@
     labels:
       swag.uptime-kuma.enabled: "true"
       swag.uptime-kuma.monitor.name: "{{ prowlarr_dashboard_name }}"
+      swag.uptime-kuma.monitor.url: "{{ prowlarr_dashboard_url }}"
 
 - name: Install the SWAG config files
   template:
