--- a/roles/radarr/tasks/main.yml
+++ b/roles/radarr/tasks/main.yml
@@ -1,11 +1,26 @@
 ---
+- name: Create the necessary Radarr folder
+  file:
+    path: "{{ docker_dir }}/{{ radarr_container_name }}"
+    state: directory
+    owner: "{{ guid }}"
+    group: "{{ guid }}"
+    mode: "0755"
+
+- name: Create a docker network
+  community.docker.docker_network:
+    name: arr_network
+    connected:
+      - "{{ swag_container_name }}"
+    appends: true
+
 - name: Make sure that Radarr container is created and running
   docker_container:
     name: "{{ radarr_container_name }}"
     image: ghcr.io/linuxserver/radarr
     pull: true
     networks:
-      - name: swag_network
+      - name: arr_network
     state: started
     env:
       PUID: "{{ guid }}"
@@ -19,6 +34,7 @@
     labels:
       swag.uptime-kuma.enabled: "true"
       swag.uptime-kuma.monitor.name: "{{ radarr_dashboard_name }}"
+      swag.uptime-kuma.monitor.url: "{{ radarr_dashboard_url }}"
 
 - name: Install the SWAG config files
   template:
