--- a/roles/readarr/tasks/main.yml
+++ b/roles/readarr/tasks/main.yml
@@ -7,13 +7,20 @@
     group: "{{ guid }}"
     mode: "0755"
 
+- name: Create a docker network
+  community.docker.docker_network:
+    name: arr_network
+    connected:
+      - "{{ swag_container_name }}"
+    appends: true
+
 - name: Make sure that Readarr container is created and running
   docker_container:
     name: "{{ readarr_container_name }}"
     image: lscr.io/linuxserver/readarr:develop
     pull: true
     networks:
-      - name: swag_network
+      - name: arr_network
     state: started
     env:
       PUID: "{{ guid }}"
@@ -27,6 +34,7 @@
     labels:
       swag.uptime-kuma.enabled: "true"
       swag.uptime-kuma.monitor.name: "{{ readarr_dashboard_name }}"
+      swag.uptime-kuma.monitor.url: "{{ readarr_dashboard_url }}"
 
 - name: Install the SWAG config files
   template:
