--- a/roles/sonarr/tasks/main.yml
+++ b/roles/sonarr/tasks/main.yml
@@ -15,13 +15,20 @@
     group: "{{ guid }}"
     mode: "0755"
 
+- name: Create a docker network
+  community.docker.docker_network:
+    name: arr_network
+    connected:
+      - "{{ swag_container_name }}"
+    appends: true
+
 - name: Make sure that Sonarr container is created and running
   docker_container:
     name: "{{ sonarr_container_name }}"
     image: ghcr.io/linuxserver/sonarr
     pull: true
     networks:
-      - name: swag_network
+      - name: arr_network
     state: started
     env:
       PUID: "{{ guid }}"
@@ -35,6 +42,7 @@
     labels:
       swag.uptime-kuma.enabled: "true"
       swag.uptime-kuma.monitor.name: "{{ sonarr_dashboard_name }}"
+      swag.uptime-kuma.monitor.url: "{{ sonarr_dashboard_url }}"
 
 - name: Install the SWAG config files
   template:
