--- a/roles/stirling_pdf/defaults/main.yml
+++ b/roles/stirling_pdf/defaults/main.yml
@@ -3,4 +3,6 @@ stirling_pdf_container_name: stirling-pdf
 stirling_pdf_subdomain: pdf
 stirling_pdf_dashboard_url: https://{{ stirling_pdf_subdomain }}.{{ site_url }}
 stirling_pdf_dashboard_name: Stirling PDF
-stirling_pdf_homer_category: media
+stirling_pdf_homer:
+  name: "{{ stirling_pdf_dashboard_name }}"
+  category: media
