--- a/roles/stirling_pdf/tasks/main.yml
+++ b/roles/stirling_pdf/tasks/main.yml
@@ -26,6 +26,7 @@
     labels:
       swag.uptime-kuma.enabled: "true"
       swag.uptime-kuma.monitor.name: "{{ stirling_pdf_dashboard_name }}"
+      swag.uptime-kuma.monitor.url: "{{ stirling_pdf_dashboard_url }}"
 
 - name: Install the SWAG config files
   template:
