--- a/roles/uptime_kuma/defaults/main.yml
+++ b/roles/uptime_kuma/defaults/main.yml
@@ -2,8 +2,8 @@
 uptime_kuma_container_name: uptime-kuma
 uptime_kuma_subdomain: status
 uptime_kuma_dashboard_url: https://{{ uptime_kuma_subdomain }}.{{ site_url }}
-uptime_kuma_homer_category: system
 uptime_kuma_homer:
   name: "Uptime Kuma"
+  category: system
   url: "{{ uptime_kuma_dashboard_url }}"
   type: "UptimeKuma"
