--- a/roles/wud/defaults/main.yml
+++ b/roles/wud/defaults/main.yml
@@ -2,7 +2,7 @@
 wud_container_name: wud
 wud_subdomain: wud
 wud_dashboard_url: https://{{ wud_subdomain }}.{{ site_url }}
-wud_homer_category: system
 wud_homer:
   name: "What's up Docker?"
+  category: system
   type: "WUD"
